# ynan26

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs  n26.rs  sync.rs  transaction.rs  ynab.rs
tests/: transaction.rs
